# CyForge

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  api.json  cyberforge.db  prd.md  pyproject.toml  test-cyberforge.db
catalog/challenges/independent/: challenge-001-sqli.yml  challenge-002-xss.yml  challenge-003-auth-bypass.yml  challenge-004-linux-privesc.yml  challenge-005-windows-powershell.yml  challenge-006-web-lfi.yml  challenge-007-web-file-upload-rce.yml  challenge-008-ad-kerberoast.yml  challenge-009-ad-adcs-esc1.yml  challenge-010-ad-enum.yml  challenge-011-ot-modbus.yml  challenge-012-network-arp-mitm.yml  challenge-013-cve-log4shell-sim.yml  challenge-014-waf-bypass.yml  challenge-015-python-powershell.yml
catalog/challenges/mvp/: challenge-001-sqli.yml  (+4 more)
catalog/killchains/: killchain-001-web-to-ad.yml  killchain-002-phishing-to-adcs.yml  killchain-003-vpn-breach-ransomware.yml  killchain-004-supply-chain-domain.yml  killchain-005-ics-hybrid-objective.yml
schemas/: challenge.schema.json
src/cyberforge/: __init__.py  challenge_validation.py  content_structure_validation.py  main.py  models.py  orchestrator.py  provisioner.py  repository.py  settings.py  sql_repository.py  state_machine.py
src/cyberforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/: app.js  index.html  styles.css
tasks/: lessons.md  todo.md
tests/: test_api.py  test_caldera_content_counts.py  test_challenge_validation.py  test_content_structure_validation.py  test_state_machine.py  test_virtualbox_provisioner.py
tools/: build_content_catalog.py
(+2 files in other folders)
